Cacti CHANGELOG

0.8.6j
-bug#0000892: Sorting by Hostname
-bug#0000842: SNMP v3 password fields does not check if entered passwords match 
-bug#0000877: PHP 5.2.0 breaks Windows cmd.php poller
-bug#0000884: graph_view.php lacks bottom nav bar
-bug#0000864: Just don't sort Tree's Naturaly, sort graphs as well.
-bug#0000883: Exploit in cmd.php with register globals enabled in php
-bug#0000848: Poller[0] ERROR: PHP Script Server communications lost.
-bug#0000870: Change Graph Template: Template list not sorted
-bug#0000882: Add "collapsable" brances in the graph trees view
-bug#0000867: Ceanup poller.php and lib/poller.php
-bug#0000885: When Exporting/Importing Data Input Methods, Space between arguments is removed
-bug#0000861: Downed Host Detection on non-SNMP devices wrong
-bug#0000886: SNMP Ping to Utilize The snmpgetnext instead of snmpget 
-bug: Data Queries were not sorted properly during initial display.
-bug: Graph changes required for Boost plugin

0.8.6i
-bug#0000188: Add ability to sort columns by selecting column headers.
-bug#0000199: Exported thumbnail graphics shows limited time range only.
-bug#0000207: Correct unit size displayed in the default 'Localhost - Memory Usage' graph.
-bug#0000286: Fix issue with bandwidth summation on exported graphs.
-bug#0000313/#0000561: Don't print menu/titlebar by using CSS class noprint.
-bug#0000316: Take the unit value field into account when creating graphs.
-bug#0000395: Fix graph export FTP functionality in Unix environments.
-bug#0000430: Add natural sort order option for graph trees.
-bug#0000433: Remove script server restriction on varying case path names.
-bug#0000488: Remove reliance on HTTP_USER_AGENT to prevent possible notices.
-bug#0000527: Fix issue updating the RRA for a graph tree item.
-bug#0000584: Add barometer decimal fix to scripts/weatherbug.pl.
-bug#0000624: Generate DEFs for graph items other than AREA, STACK, and LINE.